--- a/Folmes/Folmes.vbproj
+++ b/Folmes/Folmes.vbproj
@@ -118,7 +118,7 @@
   <ItemGroup>
     <Compile Include="Classes\UserInfoFile.vb" />
     <Compile Include="Classes\MessageFile.vb" />
-    <Compile Include="Forms\BoxChannels.Designer.vb">
+    <Compile Include="GUI\GUIChannels.Designer.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Main Modules\PingPong.Designer.vb">
@@ -131,7 +131,7 @@
     <Compile Include="Main Modules\MessageFiles.Designer.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Classes\OtherClasses.vb" />
+    <Compile Include="GUI\ToolStripColorTable.vb" />
     <Compile Include="Modules\Channels.vb" />
     <Compile Include="Modules\Files.vb" />
     <Compile Include="Modules\Notifications.vb" />
@@ -144,42 +144,41 @@
     <Compile Include="Main Modules\OutputHTMLMessages.Designer.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\AboutBox.Designer.vb">
+    <Compile Include="GUI\AboutBox.Designer.vb">
       <DependentUpon>AboutBox.vb</DependentUpon>
     </Compile>
-    <Compile Include="Forms\AboutBox.vb">
+    <Compile Include="GUI\AboutBox.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Modules\Common.vb" />
-    <Compile Include="Forms\Cleaner.Designer.vb">
+    <Compile Include="GUI\Cleaner.Designer.vb">
       <DependentUpon>Cleaner.vb</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Cleaner.vb">
+    <Compile Include="GUI\Cleaner.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\FirstRun.Designer.vb">
+    <Compile Include="GUI\FirstRun.Designer.vb">
       <DependentUpon>FirstRun.vb</DependentUpon>
     </Compile>
-    <Compile Include="Forms\FirstRun.vb">
+    <Compile Include="GUI\FirstRun.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Help.Designer.vb">
+    <Compile Include="GUI\Help.Designer.vb">
       <DependentUpon>Help.vb</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Help.vb">
+    <Compile Include="GUI\Help.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Box.Designer.vb">
-      <DependentUpon>Box.vb</DependentUpon>
+    <Compile Include="GUI\MainGUI.Designer.vb">
+      <DependentUpon>MainGUI.vb</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Box.vb">
+    <Compile Include="GUI\MainGUI.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Config.vb">
+    <Compile Include="GUI\Settings.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Config.Designer.vb">
-      <DependentUpon>Config.vb</DependentUpon>
+    <Compile Include="GUI\Settings.Designer.vb">
+      <DependentUpon>Settings.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
@@ -200,25 +199,25 @@
     <Compile Include="Special\Dropbox.vb" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Forms\AboutBox.resx">
+    <EmbeddedResource Include="GUI\AboutBox.resx">
       <DependentUpon>AboutBox.vb</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Cleaner.resx">
+    <EmbeddedResource Include="GUI\Cleaner.resx">
       <DependentUpon>Cleaner.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Config.resx">
-      <DependentUpon>Config.vb</DependentUpon>
+    <EmbeddedResource Include="GUI\Settings.resx">
+      <DependentUpon>Settings.vb</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\FirstRun.resx">
+    <EmbeddedResource Include="GUI\FirstRun.resx">
       <DependentUpon>FirstRun.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Help.resx">
+    <EmbeddedResource Include="GUI\Help.resx">
       <DependentUpon>Help.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Box.resx">
-      <DependentUpon>Box.vb</DependentUpon>
+    <EmbeddedResource Include="GUI\MainGUI.resx">
+      <DependentUpon>MainGUI.vb</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
