--- a/Folmes/Folmes.vbproj
+++ b/Folmes/Folmes.vbproj
@@ -116,13 +116,13 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Datatypes\Message.vb" />
+    <Compile Include="Classes and Structures\Message.vb" />
     <Compile Include="Classes and Structures\UserInfoFile.vb" />
     <Compile Include="Classes and Structures\MessageFile.vb" />
     <Compile Include="GUI\GUIChannels.Designer.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\MessagesContainer.vb">
+    <Compile Include="GUI\MessagesDisplay.vb">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="GUI\NFToolStrip.vb">
@@ -203,7 +203,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="Special\Dropbox.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="GUI\AboutBox.resx">
@@ -238,7 +237,7 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Project Info\Graph1.dgml" />
+    <None Include="Graph1.dgml" />
     <None Include="My Project\app.manifest">
       <SubType>Designer</SubType>
     </None>
@@ -283,7 +282,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="obj\x86\Debug\" />
-    <Folder Include="OtherModules\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\X.png" />
@@ -291,7 +289,7 @@
     <EmbeddedResource Include="Resources\DBM.ico" />
     <None Include="Resources\folder.png" />
     <None Include="Resources\chat.png" />
-    <Content Include="Project Info\INFO.txt" />
+    <Content Include="INFO.txt" />
     <Content Include="Resources\CleanerScripts.js" />
     <None Include="Resources\newmsg_online.png" />
     <None Include="Resources\newmsg.png" />
