Implemented part of new MessageFile system

--- a/Folmes/Folmes.vbproj
+++ b/Folmes/Folmes.vbproj
@@ -118,7 +118,6 @@
   <ItemGroup>
     <Compile Include="ANEW\Messages.vb" />
     <Compile Include="Classes and Structures\Message.vb" />
-    <Compile Include="Classes and Structures\MessageFile.vb" />
     <Compile Include="Classes and Structures\UserInfoFile.vb" />
     <Compile Include="GUI\GUIChannels.Designer.vb">
       <SubType>Form</SubType>
@@ -129,7 +128,7 @@
     <Compile Include="GUI\NFToolStrip.vb">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="ANEW\NewMessageFile.vb" />
+    <Compile Include="ANEW\MessageFile.vb" />
     <Compile Include="Main Modules\PingPong.Designer.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -137,10 +136,7 @@
       <SubType>
       </SubType>
     </Compile>
-    <Compile Include="Main Modules\MessageFiles.Designer.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="GUI\ToolStripColorTable.vb" />
+    <Compile Include="Main Modules\ToolStripColorTable.vb" />
     <Compile Include="Modules\Channels.vb" />
     <Compile Include="Modules\Files.vb" />
     <Compile Include="Modules\Notifications.vb" />
@@ -148,9 +144,6 @@
     <Compile Include="Modules\Directories.vb" />
     <Compile Include="Modules\HTML.vb" />
     <Compile Include="Main Modules\FSWatcher.Designer.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Main Modules\OutputHTMLMessages.Designer.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GUI\AboutBox.Designer.vb">
