--- a/Folmes/Folmes.vbproj
+++ b/Folmes/Folmes.vbproj
@@ -132,10 +132,10 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Modules\MessageFile.vb" />
-    <Compile Include="Modules\PingPong.Designer.vb">
+    <Compile Include="Modules\PingPong.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Modules\UserInfoFiles.Designer.vb">
+    <Compile Include="Modules\UserInfoFiles.vb">
       <SubType>
       </SubType>
     </Compile>
@@ -146,7 +146,7 @@
     <Compile Include="Modules\SentFiles.vb" />
     <Compile Include="Modules\Directories.vb" />
     <Compile Include="Modules\HTML.vb" />
-    <Compile Include="Modules\FSWatcher.Designer.vb">
+    <Compile Include="Modules\FSWatchers.Designer.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GUI\AboutBox.Designer.vb">
@@ -279,6 +279,7 @@
     <None Include="Resources\users.png" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Modules\Settings\" />
     <Folder Include="obj\x86\Debug\" />
   </ItemGroup>
   <ItemGroup>
