--- a/Folmes/Folmes.vbproj
+++ b/Folmes/Folmes.vbproj
@@ -138,9 +138,9 @@
     <Compile Include="_ToReDo\Channels.vb" />
     <Compile Include="_Modules_constant\Files.vb" />
     <Compile Include="_Modules_constant\Notifications.vb" />
-    <Compile Include="_ToReDo\Attachments.vb" />
+    <Compile Include="_Modules_constant\Attachments.vb" />
     <Compile Include="_Modules_constant\Dirs.vb" />
-    <Compile Include="_Modules_constant\HTML.vb" />
+    <Compile Include="_Modules_constant\HtmlConverter.vb" />
     <Compile Include="_Modules_variable\FSWatchers.Designer.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -174,10 +174,10 @@
     <Compile Include="_GUI\MainGUI.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="_GUI\Settings.vb">
+    <Compile Include="_ToReDo\Settings.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="_GUI\Settings.Designer.vb">
+    <Compile Include="_ToReDo\Settings.Designer.vb">
       <DependentUpon>Settings.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
@@ -208,7 +208,7 @@
     <EmbeddedResource Include="_ToReDo\Cleaner.resx">
       <DependentUpon>Cleaner.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="_GUI\Settings.resx">
+    <EmbeddedResource Include="_ToReDo\Settings.resx">
       <DependentUpon>Settings.vb</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
