--- a/Folmes/Folmes.vbproj
+++ b/Folmes/Folmes.vbproj
@@ -116,12 +116,13 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="_Interfaces\ICommunication.vb" />
     <Compile Include="_GUI\Controls\InputTextBox.vb">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="_Modules_constant\InputParser.vb" />
-    <Compile Include="_Modules_variable\MessagesManager.vb" />
-    <Compile Include="_Types\Message.vb" />
+    <Compile Include="TextProcessing\InputParser.vb" />
+    <Compile Include="_Modules\MessagesManager.vb" />
+    <Compile Include="Types\Message.vb" />
     <Compile Include="_GUI\GUIChannels.Designer.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -131,17 +132,16 @@
     <Compile Include="_GUI\Controls\NFToolStrip.vb">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="_Modules_constant\MessageFile.vb" />
-    <Compile Include="_Modules_variable\PingPong.vb" />
-    <Compile Include="_Modules_variable\Users.vb" />
+    <Compile Include="_Communication\File\MessageFile.vb" />
+    <Compile Include="_Communication\File\PingPong.vb" />
+    <Compile Include="_Modules\Users.vb" />
     <Compile Include="_GUI\Style\ToolStripColorTable.vb" />
-    <Compile Include="_ToReDo\Channels.vb" />
-    <Compile Include="_Modules_constant\Files.vb" />
-    <Compile Include="_Modules_constant\Notifications.vb" />
-    <Compile Include="_Modules_constant\Attachments.vb" />
-    <Compile Include="_Modules_constant\Dirs.vb" />
-    <Compile Include="_Modules_constant\HtmlConverter.vb" />
-    <Compile Include="_Modules_variable\FSWatchers.Designer.vb">
+    <Compile Include="_TODO\Channels.vb" />
+    <Compile Include="_GUI\Notifications.vb" />
+    <Compile Include="_Communication\File\Files.vb" />
+    <Compile Include="_Communication\File\Dirs.vb" />
+    <Compile Include="TextProcessing\HtmlConverter.vb" />
+    <Compile Include="_Communication\File\FSWatchers.Designer.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="_GUI\AboutBox.Designer.vb">
@@ -150,10 +150,10 @@
     <Compile Include="_GUI\AboutBox.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="_ToReDo\Cleaner.Designer.vb">
+    <Compile Include="_TODO\Cleaner.Designer.vb">
       <DependentUpon>Cleaner.vb</DependentUpon>
     </Compile>
-    <Compile Include="_ToReDo\Cleaner.vb">
+    <Compile Include="_TODO\Cleaner.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="_GUI\FirstRun.Designer.vb">
@@ -174,10 +174,10 @@
     <Compile Include="_GUI\MainGUI.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="_ToReDo\Settings.vb">
+    <Compile Include="_GUI\Settings.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="_ToReDo\Settings.Designer.vb">
+    <Compile Include="_GUI\Settings.Designer.vb">
       <DependentUpon>Settings.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
@@ -196,19 +196,19 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="_Types\MessageQueue.vb" />
-    <Compile Include="_Types\User.vb" />
-    <Compile Include="_Unused\IRC.vb" />
+    <Compile Include="Types\MessageQueue.vb" />
+    <Compile Include="Types\User.vb" />
+    <Compile Include="_Communication\IRC\IRC.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="_GUI\AboutBox.resx">
       <DependentUpon>AboutBox.vb</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="_ToReDo\Cleaner.resx">
+    <EmbeddedResource Include="_TODO\Cleaner.resx">
       <DependentUpon>Cleaner.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="_ToReDo\Settings.resx">
+    <EmbeddedResource Include="_GUI\Settings.resx">
       <DependentUpon>Settings.vb</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
@@ -233,8 +233,6 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="ClassDiagram1.cd" />
-    <None Include="Graph1.dgml" />
     <None Include="My Project\app.manifest">
       <SubType>Designer</SubType>
     </None>
