--- a/Folmes/Folmes.vbproj
+++ b/Folmes/Folmes.vbproj
@@ -199,7 +199,7 @@
     </Compile>
     <Compile Include="Types\MessageQueue.vb" />
     <Compile Include="Types\User.vb" />
-    <Compile Include="CommunicationInterfaces\IRCCI\IRC.vb" />
+    <Compile Include="CommunicationInterfaces\IRCCI\IRCClient.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="GUI\AboutBox.resx">
