--- a/Folmes/App.config
+++ b/Folmes/App.config
@@ -7,11 +7,11 @@
     </configSections>
     <startup>
         
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup>
     <userSettings>
         <Folmes.My.MySettings>
             <setting name="Username" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="ThumbnailHeight" serializeAs="String">
                 <value>80</value>
@@ -22,7 +22,7 @@
             <setting name="Channel" serializeAs="String">
                 <value>public</value>
             </setting>
-            <setting name="NofMsgs" serializeAs="String">
+            <setting name="MessageQueueCapacity" serializeAs="String">
                 <value>30</value>
             </setting>
             <setting name="WindowSize" serializeAs="String">
@@ -35,7 +35,7 @@
                 <value>Dark</value>
             </setting>
             <setting name="LastReadTimes" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="Notifications" serializeAs="String">
                 <value>170</value>
